--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dist": "src/main.js",
+      "dest": "src/main.js",
       "methods": [
         "GET",
         "POST",
